# powersync-sqlite-core

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  Package.swift  README.md  RELEASING.md  UUID.md  all-ios-loadable.sh  build-pod.sh  powersync-sqlite-core.podspec  powersync-sqlite.podspec  rust-toolchain.toml
.cargo/: config  config.toml
.github/: dependabot.yml  zizmor.yaml
.github/actions/android/: action.yml
.github/actions/linux/: action.yml
.github/actions/macos/: action.yml
.github/actions/upload/: action.yml
.github/actions/wasm/: action.yml
.github/actions/windows/: action.yml
.github/actions/xcframework/: action.yml
.github/workflows/: android-publish.yml  android.yml  ios.yml  linux.yml  macos.yml  release.yml  temp-spm-test.yml  tests.yml  valgrind.yml  wasm.yml  windows.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/: AndroidManifest.xml
android/src/prefab/: prefab.json
android/src/prefab/modules/powersync/include/: powersync.h
android/src/prefab/modules/powersync/libs/android.arm64-v8a/: abi.json
android/src/prefab/modules/powersync/libs/android.armeabi-v7a/: abi.json
android/src/prefab/modules/powersync/libs/android.x86/: abi.json
android/src/prefab/modules/powersync/libs/android.x86_64/: abi.json
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: bson.rs  bucket_priority.rs  checkpoint.rs  client_id.rs  constants.rs  crud_vtab.rs  diff.rs  error.rs  ext.rs  fix035.rs  fix_data.rs  json.rs  json_merge.rs  json_util.rs  json_writer.rs  kv.rs  lib.rs  macros.rs  migrations.rs  operations.rs  operations_vtab.rs  pre_close_vtab.rs  schema_management.rs  state.rs  sync_local.rs  sync_types.rs  update_hooks.rs  util.rs  uuid.rs  version.rs  view_admin.rs  views.rs  vtab_util.rs  zstd.rs
crates/core/src/bson/: de.rs  error.rs  mod.rs  parser.rs  writer.rs
crates/core/src/schema/: common.rs  inspection.rs  management.rs  mod.rs  raw_table.rs  table_info.rs
crates/core/src/sync/: bucket_priority.rs  checkpoint.rs  checksum.rs  diagnostics.rs  interface.rs  line.rs  mod.rs  operations.rs  storage_adapter.rs  streaming_sync.rs  subscriptions.rs  sync_local.rs  sync_status.rs
crates/core/src/utils/: mod.rs  sql_buffer.rs
crates/loadable/: Cargo.toml  README.md
crates/loadable/src/: lib.rs
crates/shell/: Cargo.toml  README.md  build.rs
crates/shell/src/: main.rs
crates/sqlite/: Cargo.toml  README.md  build.rs
crates/sqlite/src/: main.rs
crates/sqlite_nostd/: Cargo.toml  README.md  build.rs
crates/sqlite_nostd/src/: allocator.rs  capi.rs  lib.rs  nostd.rs
crates/static/: Cargo.toml  README.md
crates/static/src/: lib.rs
dart/: README.md  dart_test.yaml  pubspec.yaml
dart/benchmark/: apply_lines.dart
dart/test/: crud_test.dart  error_test.dart  js_key_encoding_test.dart  json_test.dart  legacy_sync_test.dart  migration_test.dart  new_sync_test.dart  perf_test.dart  schema_test.dart  sync_local_performance_test.dart  sync_stream_test.dart  sync_test.dart  update_hooks_test.dart
dart/test/goldens/: simple_iteration.json  starting_stream.json
dart/test/utils/: fix_035_fixtures.dart  matchers.dart  migration_fixtures.dart  native_test_utils.dart  schema.dart  test_utils.dart  tracking_vfs.dart
dart/tool/: all_tests.dart  download_sqlite3.dart  run_tests.dart
docs/: RELEASING.md  built_libraries.md  historic-write-checkpoints.md  schema.md  sync.md  write-checkpoint-requests.md
tool/: build_linux.sh  build_linux_sanitized.sh  build_macos.sh  build_wasm.sh  build_windows.sh  build_xcframework.sh  install_choco.ps1
wasm/: asyncify_imports.json
