[package]
name = "powersync_loadable"
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[lib]
name = "powersync"
crate-type = ["cdylib"]

[dependencies]
sqlite_nostd = { workspace=true }

[dependencies.powersync_core]
path = "../core"
default-features = false
features = []

[features]
default = ["powersync_core/loadable_extension", "sqlite_nostd/loadable_extension", "powersync_core/getrandom"]
