[package]
name = "powersync_sqlite"
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[lib]
name = "powersync_sqlite"
path = "src/main.rs"
crate-type = ["staticlib"]

[[bin]]
name = "powersync_sqlite"
path = "src/main.rs"
required-features = ["shell"]

[dependencies]
powersync_core = { path="../core", default-features = false, features = ["static", "omit_load_extension"] }
sqlite_nostd = { workspace=true, features = ["static", "omit_load_extension"] }

[features]
default = []
shell = []

[build-dependencies]
cc = "1.0.46"
