[package]
name = "sqlite3"
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[lib]
name = "sqlite3"
path = "src/main.rs"
crate-type = ["staticlib"]

[[bin]]
name = "sqlite3"
path = "src/main.rs"
required-features = ["shell"]

[dependencies]

[features]
default = []
shell = []

[build-dependencies]
cc = "1.0.46"
