[package]
name = "powersync_sqlite_nostd"
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true

[lib]
name = "powersync_sqlite_nostd"
crate-type = ["rlib"]


[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

[features]
static = []

[build-dependencies]
bindgen = "0.72.1"
